update Swagger params
